Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
   <head>
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="description" content="Arma3-epoch-lootspawner : Updated Na_Palm Arma 3 Loot spawner (Lootspawner) script, modified to work on Arma 3 Epoch Chernarus">
+    <meta name="description" content="Arma 3 Epoch Lootspawner : Updated Na_Palm Arma 3 Loot spawner (Lootspawner) script, modified to work on Arma 3 Epoch Chernarus">
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
-    <title>Arma3-epoch-lootspawner</title>
+    <title>Arma 3 Epoch Lootspawner</title>
   </head>
 
   <body>
@@ -18,7 +18,7 @@
         <header class="inner">
           <a id="forkme_banner" href="https://github.com/secondcoming/Arma3-Epoch-Lootspawner">View on GitHub</a>
 
-          <h1 id="project_title">Arma3-epoch-lootspawner</h1>
+          <h1 id="project_title">Arma 3 Epoch Lootspawner</h1>
           <h2 id="project_tagline">Updated Na_Palm Arma 3 Loot spawner (Lootspawner) script, modified to work on Arma 3 Epoch Chernarus</h2>
 
             <section id="downloads">
@@ -68,12 +68,22 @@ $ git checkout gh-pages
     <!-- FOOTER  -->
     <div id="footer_wrap" class="outer">
       <footer class="inner">
-        <p class="copyright">Arma3-epoch-lootspawner maintained by <a href="https://github.com/secondcoming">secondcoming</a></p>
+        <p class="copyright">Arma 3 Epoch Lootspawner maintained by <a href="https://github.com/secondcoming">secondcoming</a></p>
         <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
       </footer>
     </div>
 
-    
+              <script type="text/javascript">
+            var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
+            document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
+          </script>
+          <script type="text/javascript">
+            try {
+              var pageTracker = _gat._getTracker("UA-58371170-1");
+            pageTracker._trackPageview();
+            } catch(err) {}
+          </script>
+
 
   </body>
 </html>
